Fixing swagger references
