# beacond/server/models.go
@@ -1,6 +1,16 @@
 package server
 
-type baseResponse struct {
+type BaseResponse struct {
 	Message string `json:"message"`
 	Error   string `json:"error"`
+}
+
+type BeaconDescribeResponse struct {
+	Registry string   `json:"registry"`
+	Probes   []string `json:"probes"`
+	Runtime  string   `json:"runtime"`
+}
+
+type ListProbesResponse struct {
+	Probes []string `json:"probes"`
 }
