# docs/swagger.json
@@ -15,7 +15,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BeaconDescribeResponse"
                         }
                     }
                 }
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     }
                 }
@@ -65,31 +65,31 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     }
                 }
@@ -120,25 +120,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.BaseResponse"
                         }
                     }
                 }
@@ -155,7 +155,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.baseResponse"
+                            "$ref": "#/definitions/server.ListProbesResponse"
                         }
                     }
                 }
@@ -163,7 +163,7 @@
         }
     },
     "definitions": {
-        "server.baseResponse": {
+        "server.BaseResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -171,6 +171,34 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "server.BeaconDescribeResponse": {
+            "type": "object",
+            "properties": {
+                "probes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "registry": {
+                    "type": "string"
+                },
+                "runtime": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.ListProbesResponse": {
+            "type": "object",
+            "properties": {
+                "probes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
